# retcon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  book.toml
.claude/: settings.local.json
.github/workflows/: release-plz.yml  release.yml
md/: SUMMARY.md  creating-spec.md  history-cleanup.md  history-spec.md  overview.md  reconstruction-loop.md  users-guide.md
src/: execute.rs  git.rs  lib.rs  main.rs  prompt.md  prompt.rs  spec.rs  tui.rs
