[package]
name = "retcon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
determinishtic = "0.1.0"
sacp = "11.0.0-alpha.1"
sacp-tokio = "11.0.0-alpha.1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
