[package]
name = "retcon"
version = "0.1.0"
edition = "2024"
description = "Turn messy development commits into clean, logical history. Because you knew what you were doing the whole time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikomatsakis/retcon"
keywords = ["git", "history", "llm", "commits"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
determinishtic = "0.1.0"
sacp = "11.0.0-alpha.1"
sacp-tokio = "11.0.0-alpha.1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
