[package]
name = "retcon"
version = "0.1.2"
edition = "2024"
description = "Turn messy development commits into clean, logical history. Because you knew what you were doing the whole time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/nikomatsakis/retcon"
keywords = ["git", "history", "llm", "commits"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
determinishtic = "0.1.1"
sacp = "11.0.0-alpha.1"
sacp-tokio = "11.0.0-alpha.1"
schemars = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[package.metadata.symposium]
binary = "retcon-proxy"

[[bin]]
name = "retcon-proxy"
path = "src/bin/retcon-proxy.rs"
